JT-9231 fix wrapping for mobile for school profiles

--- a/app/assets/stylesheets/school_profiles/_hero.scss
+++ b/app/assets/stylesheets/school_profiles/_hero.scss
@@ -65,6 +65,11 @@
       .mobile-address {
         padding-top: 10px;
         display: block;
+        .badge-and-content{
+          .content{
+            white-space: pre-wrap;
+          }
+        }
       }
     }
     .vertical-items {
